--- a/teszt/teszt.cbp
+++ b/teszt/teszt.cbp
@@ -9,6 +9,7 @@
 			<Target title="Debug Win32">
 				<Option output="teszt" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Debug Win32" />
+				<Option external_deps="..\libs\lib_d.a;" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -32,6 +33,7 @@
 			<Target title="Release Win32">
 				<Option output="teszt" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Release Win32" />
+				<Option external_deps="..\libs\lib.a;" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
