--- a/winteszt/winteszt.vcproj
+++ b/winteszt/winteszt.vcproj
@@ -146,6 +146,7 @@
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="1"
+				Profile="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
