--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -286,6 +286,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\json\jsonparser.h"
+				>
+			</File>
+			<File
 				RelativePath=".\scripting\lualib\lapi.h"
 				>
 			</File>
@@ -362,11 +366,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lua.h"
+				RelativePath=".\scripting\lualib\lua.h"
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lualib\lua.h"
+				RelativePath=".\scripting\lua.h"
 				>
 			</File>
 			<File
@@ -699,6 +703,10 @@
 			</File>
 			<File
 				RelativePath=".\input\inputsystem.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\json\jsonparser.cpp"
 				>
 			</File>
 			<File
