--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -578,6 +578,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\threading\taskmanager2.h"
+				>
+			</File>
+			<File
 				RelativePath=".\render\texture.h"
 				>
 			</File>
