--- a/teszt/teszt.vcproj
+++ b/teszt/teszt.vcproj
@@ -122,7 +122,10 @@
 				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="..\libs\"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;NOMINMAX"
+				ExceptionHandling="0"
 				RuntimeLibrary="2"
+				BufferSecurityCheck="false"
+				FloatingPointModel="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="false"
