--- a/teszt/teszt.vcproj
+++ b/teszt/teszt.vcproj
@@ -196,6 +196,18 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\napkiszamolo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\opencl.h"
+				>
+			</File>
+			<File
+				RelativePath=".\sorttest.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
