--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -174,6 +174,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\physics\collision\shapeintersection\boxboxintersection.h"
+				>
+			</File>
+			<File
+				RelativePath=".\physics\collision\shapeintersection\boxsphereintersection.h"
+				>
+			</File>
+			<File
 				RelativePath=".\physics\collision\broadphase\broadphaseobject.h"
 				>
 			</File>
@@ -183,6 +191,10 @@
 			</File>
 			<File
 				RelativePath=".\math\geometry\bsp.h"
+				>
+			</File>
+			<File
+				RelativePath=".\render\cameranode.h"
 				>
 			</File>
 			<File
@@ -582,19 +594,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\threading\task.h"
-				>
-			</File>
-			<File
-				RelativePath=".\threading\taskallocator.h"
-				>
-			</File>
-			<File
 				RelativePath=".\threading\taskmanager.h"
-				>
-			</File>
-			<File
-				RelativePath=".\threading\taskmanager2.h"
 				>
 			</File>
 			<File
@@ -667,6 +667,10 @@
 			</File>
 			<File
 				RelativePath=".\math\geometry\bsp.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\render\cameranode.cpp"
 				>
 			</File>
 			<File
@@ -934,15 +938,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\threading\task.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\threading\taskmanager.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\threading\taskmanager2.cpp"
 				>
 			</File>
 			<File
