--- a/winteszt/winteszt.vcproj
+++ b/winteszt/winteszt.vcproj
@@ -198,6 +198,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\mlforsaken.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\runtime.cpp"
 				>
 			</File>
@@ -241,6 +245,10 @@
 			</File>
 			<File
 				RelativePath=".\game.h"
+				>
+			</File>
+			<File
+				RelativePath=".\mlforsaken.h"
 				>
 			</File>
 			<File
