--- a/winteszt/winteszt.vcproj
+++ b/winteszt/winteszt.vcproj
@@ -194,6 +194,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\boxtower.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\game.cpp"
 				>
 			</File>
@@ -249,6 +253,10 @@
 			>
 			<File
 				RelativePath=".\boxstack.h"
+				>
+			</File>
+			<File
+				RelativePath=".\boxtower.h"
 				>
 			</File>
 			<File
