--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -290,6 +290,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\math\inertia.h"
+				>
+			</File>
+			<File
 				RelativePath=".\input\inputsystem.h"
 				>
 			</File>
@@ -390,11 +394,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lua.h"
+				RelativePath=".\scripting\lualib\lua.h"
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lualib\lua.h"
+				RelativePath=".\scripting\lua.h"
 				>
 			</File>
 			<File
