--- a/winteszt/winteszt.vcproj
+++ b/winteszt/winteszt.vcproj
@@ -202,6 +202,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\meshtower.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\mlforsaken.cpp"
 				>
 			</File>
@@ -261,6 +265,10 @@
 			</File>
 			<File
 				RelativePath=".\game.h"
+				>
+			</File>
+			<File
+				RelativePath=".\meshtower.h"
 				>
 			</File>
 			<File
